--- a/index.html
+++ b/index.html
@@ -30,9 +30,77 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-md-1 hour" id="9">9 AM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="10">10 AM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="11">11 AM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="12">12 PM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="13">1 PM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="14">2 PM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="15">3 PM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="16">4 PM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1 hour" id="17">5 PM</div>
+        <textarea class="col-md-10 toDo">todos</textarea>
+        <button class="col-md-1 btn">save</button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
+
+<!--GIVEN I am using a daily planner to create a schedule
+WHEN I open the planner
+THEN the current day is displayed at the top of the calendar
+WHEN I scroll down
+THEN I am presented with time blocks for standard business hours
+WHEN I view the time blocks for that day
+THEN each time block is color-coded to indicate whether it is in the past, present, or future
+WHEN I click into a time block
+THEN I can enter an event
+WHEN I click the save button for that time block
+THEN the text for that event is saved in local storage
+WHEN I refresh the page
+THEN the saved events persist-->
