Added comments to script.js

--- a/index.html
+++ b/index.html
@@ -32,56 +32,56 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col-md-1 hour" id="9">9 AM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="10">10 AM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="11">11 AM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="12">12 PM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="13">1 PM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="14">2 PM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="15">3 PM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="16">4 PM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
 
       <div class="row">
         <div class="col-md-1 hour" id="17">5 PM</div>
-        <textarea class="col-md-10 toDo">todos</textarea>
-        <button class="col-md-1 btn">save</button>
+        <textarea class="col-md-10 toDo">To Do's</textarea>
+        <button class="col-md-1 btn">Save</button>
       </div>
     </div>
 
